--- a/app/src/app/components/home.template.html
+++ b/app/src/app/components/home.template.html
@@ -1,26 +1,49 @@
 <div fxLayout="row wrap" fxLayoutAlign="start stretch" [fxShow]="true" fxFill>
   <div fxLayout="column wrap" fxFlex="100" fxLayoutAlign="start stretch" [fxShow]="true">
-    <div fxLayout="row wrap" class="tool-bar-height padding-10px" fxLayoutAlign="space-between center" [fxShow]="true">
-      <div fxLayout="column wrap" fxFlex="16" fxLayoutAlign="start stretch" [fxShow]="true"><img imgSrc="Web/Icons/sweepheader.webp" class="tool-bar-img"></div>
-      <div fxLayout="column wrap" fxFlex="80" fxLayoutAlign="start stretch" [fxShow]="true">
-        <div fxLayout="row wrap" fxLayoutAlign="space-between center" [fxShow]="true">
-          <div fxLayout="column wrap" fxFlex="82" fxLayoutAlign="end end" [fxShow]="true">
-            <div fxLayout="row wrap" fxLayoutGap="50px" fxLayoutAlign="space-between center" [fxShow]="true">
-              <div fxLayout="column wrap" class="tool-bar-text cursor-pointer" fxLayoutAlign="start stretch" [fxShow]="true" *ngFor="let item of page.headerItems">
+    <div fxLayout="row wrap" class="paddingSide" fxFlex="10" fxLayoutAlign="space-between center" [fxShow]="true">
+      <div fxLayout="column wrap" fxFlex="30" fxLayoutAlign="center stretch" [fxShow]="true"><img imgSrc="Web/Icons/sweepheader.webp" class="tool-bar-img"></div>
+      <div fxLayout="column wrap" fxFlex="35" fxLayoutAlign="start stretch" [fxShow]="true">
+        <div fxLayout="row wrap" class="width65" fxLayoutGap="0.5em" fxLayoutAlign="center center" [fxShow]="true">
+          <div fxLayout="column wrap" fxLayoutAlign="start stretch" [fxShow]="true">
+            <div fxLayout="row wrap" class="skyBlueBorder borderRadious50 equalHeightWidth" fxLayoutAlign="center center" [fxShow]="true">
+              <div fxLayout="column wrap" class="cursor-pointer" fxLayoutAlign="start stretch" [fxShow]="true">
                 <div>
-                  {{item.name}}
-                </div>
+                  1</div>
               </div>
             </div>
           </div>
-          <div fxLayout="column wrap" class="cursor-pointer tool-bar-btn" fxFlex="16" fxLayoutAlign="center stretch" [fxShow]="true">
-            <div fxLayout="row wrap" fxLayoutAlign="space-between center" [fxShow]="true">
-              <div>
-                BOOK A SERVICE </div>
-              <mat-icon>expand_more</mat-icon>
+          <div fxLayout="column wrap" fxLayoutAlign="start stretch" [fxShow]="true">
+            <div fxLayout="row wrap" class="skyBlueBorder borderRadious50 equalHeightWidth" fxLayoutAlign="center center" [fxShow]="true">
+              <div fxLayout="column wrap" class="cursor-pointer" fxLayoutAlign="start stretch" [fxShow]="true">
+                <div>
+                  2</div>
+              </div>
+            </div>
+          </div>
+          <div fxLayout="column wrap" fxLayoutAlign="start stretch" [fxShow]="true">
+            <div fxLayout="row wrap" class="skyBlueBorder borderRadious50 equalHeightWidth" fxLayoutAlign="center center" [fxShow]="true">
+              <div fxLayout="column wrap" class="cursor-pointer" fxLayoutAlign="start stretch" [fxShow]="true">
+                <div>
+                  3</div>
+              </div>
             </div>
           </div>
         </div>
+      </div>
+      <div fxLayout="column wrap" fxFlex="20" fxLayoutAlign="start stretch" [fxShow]="true">
+        <div fxLayout="row wrap" fxLayoutAlign="space-between center" [fxShow]="true">
+          <div fxLayout="column wrap" fxFlex="82" fxLayoutAlign="end end" [fxShow]="true">
+            <div>
+              SIGN IN</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div fxLayout="row wrap" class="bgSkyBlue overflowy bodyHeight" fxLayoutAlign="space-around space-around" [fxShow]="true">
+      <div fxLayout="column wrap" fxFlex="65" fxLayoutAlign="start stretch" [fxShow]="true"></div>
+      <div fxLayout="column wrap" fxFlex="30" fxLayoutAlign="start stretch" [fxShow]="true">
+        <div fxLayout="row wrap" fxLayoutAlign="start stretch" [fxShow]="true"></div>
+        <div fxLayout="row wrap" fxLayoutAlign="start stretch" [fxShow]="true"></div>
       </div>
     </div>
   </div>
